--- a/domain.html
+++ b/domain.html
@@ -4,14 +4,13 @@
 <head>
 	<title>Stakaman.gr</title>
 </head>
-<body style="font-family: 'Tahoma';">
-	<img src="/Stakaman.jpeg" alt="stakaman_logo"/>
+<body style="font-family: 'Tahoma';background: #F2F2F2;">
+	<a href="index.html"><img src="Stakaman.jpg" alt="stakaman_logo"/></a>
 	<ul>
-		<li><a href="/etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
-		<li><a href="/filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
-		<li><a href="/domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
-		<li><a href="/upiresies.html">ΥΠΗΡΕΣΙΕΣ</a></li>
-		<li><a href="/epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+		<li><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
+		<li><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
+		<li><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
+		<li><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
 	</ul>
 	
 	<h2 style="color:#19BEBA">Τιμοκατάλογος Ονομάτων Χώρου</h2>
