--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 	<title>Stakaman.gr</title>
 	
 </head>
-<body style="font-family: 'Tahoma';">
-	<img src="/Stakaman.jpeg" alt="stakaman_logo"/>
+<body style="font-family: 'Tahoma';background: #F2F2F2;">
+	<a href="index.html"><img src="Stakaman.jpg" alt="stakaman_logo"/></a>
 	<ul>
-		<li><a href="/etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
-		<li><a href="/filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
-		<li><a href="/domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
-		<li><a href="/upiresies.html">ΥΠΗΡΕΣΙΕΣ</a></li>
-		<li><a href="/epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+		<li><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
+		<li><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
+		<li><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
+		<li><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
 	</ul>
 	
 		<div class="domain">
@@ -67,7 +66,7 @@
 				</tr>
 			</table>	
 
-			<iframe src="http://mycompany.com.gr/" width="100" height="100"></iframe>
+			<iframe src="http://mycompany.com.gr/" width="auto" height="auto"></iframe>
         </div>
 	
 </body>	
