--- a/filoksenia.html
+++ b/filoksenia.html
@@ -4,14 +4,13 @@
 <head>
 	<title>Stakaman.gr</title>
 </head>
-<body style="font-family: 'Tahoma';">
-	<img src="/Stakaman.jpeg" alt="stakaman_logo"/>
+<body style="font-family: 'Tahoma';background: #F2F2F2;">
+	<a href="index.html"><img src="Stakaman.jpg" alt="stakaman_logo"/></a>
 	<ul>
-		<li><a href="/etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
-		<li><a href="/filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
-		<li><a href="/domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
-		<li><a href="/upiresies.html">ΥΠΗΡΕΣΙΕΣ</a></li>
-		<li><a href="/epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+		<li><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
+		<li><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
+		<li><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
+		<li><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
 	</ul>
 <div class="detail">
 	<h2 style="color:#19BEBA">Δωρεάν Linux Φιλοξενία</h2>
@@ -25,7 +24,7 @@
 			<li>2 Λογαριασμοί Emails(π.χ. info@ΤοΌνομαΜου.gr)</li>
 		</ul>
 	</div>     
-	<img src="/welcomeMsg.jpeg" alt="woman"/>
+	<img src="welcomeMsg.jpg" alt="woman"/>
 </div>
 </body>	
 </html>
