--- a/domain.html
+++ b/domain.html
@@ -6,11 +6,12 @@
 </head>
 <body style="font-family: 'Tahoma';background: #F2F2F2;">
 	<a href="index.html"><img src="Stakaman.jpg" alt="stakaman_logo"/></a>
-	<ul>
-		<li><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a></li>
-		<li><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a></li>
-		<li><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a></li>
-		<li><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+	<ul style="list-style:none;">
+		<li style="float: left;"><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+		<li style="float: left;"><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+		<li style="float: left;"><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+		<li style="float: left;"><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+		<br>
 	</ul>
 	
 	<h2 style="color:#19BEBA">Τιμοκατάλογος Ονομάτων Χώρου</h2>
