--- a/domain.html
+++ b/domain.html
@@ -10,6 +10,7 @@
 		<li style="float: left;"><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li style="float: left;"><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li style="float: left;"><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+		<li style="float: left;"><a href="upiresies.html">ΥΠΗΡΕΣΙΕΣ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li style="float: left;"><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
 		<br>
 	</ul>
