--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<li style="float: left;"><a href="etairia.html">Η ΕΤΑΙΡΙΑ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li style="float: left;"><a href="filoksenia.html">ΦΙΛΟΞΕΝΙΑ ΙΣΤΟΣΕΛΙΔΩΝ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li style="float: left;"><a href="domain.html">ΟΝΟΜΑΤΑ ΧΩΡΟΥ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+		<li style="float: left;"><a href="upiresies.html">ΥΠΗΡΕΣΙΕΣ</a>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li style="float: left;"><a href="epikoinonia.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
 		<br>
 	</ul>
@@ -18,7 +19,7 @@
 		<div class="domain">
 				<h3 style="color:#19BEBA">Κατοχυρώστε τα .gr Domains σας μόνο με 13,90€/2 χρόνια</h3>
 				<form action="" method="post">				
-                <strong>www.</strong> <input type="text" name="domain" style="width:400px" class="domain_textfield" value="Αναζήτηση Ονόματος Χώρου">
+                <strong>www.</strong> <input type="text" name="domain" style="width:70px" class="domain_textfield" value="Αναζήτηση Ονόματος Χώρου">
 				<select name="ext" class="domain_select">
 					<option>.gr</option>
 					<option>.com.gr</option>
